@@ -1986,7 +1986,9 @@ static void generateCpp(sipSpec *pt, moduleDef *mod, const char *codeDir,
 "    /* Export the module and publish it's API. */\n"
 "    if (sipExportModule(&sipModuleAPI_%s,SIP_API_MAJOR_NR,SIP_API_MINOR_NR,0) < 0)\n"
 "    {\n"
+"#if PY_VERSION_HEX < 0x03010000\n"
 "        Py_DECREF(sip_sipmod);\n"
+"#endif\n"
 "        SIP_MODULE_DISCARD(sipModule);\n"
 "        SIP_MODULE_RETURN(0);\n"
 "    }\n"
@@ -2010,7 +2012,9 @@ static void generateCpp(sipSpec *pt, moduleDef *mod, const char *codeDir,
 "    /* Initialise the module now all its dependencies have been set up. */\n"
 "    if (sipInitModule(&sipModuleAPI_%s,sipModuleDict) < 0)\n"
 "    {\n"
+"#if PY_VERSION_HEX < 0x03010000\n"
 "        Py_DECREF(sip_sipmod);\n"
+"#endif\n"
 "        SIP_MODULE_DISCARD(sipModule);\n"
 "        SIP_MODULE_RETURN(0);\n"
 "    }\n"
@@ -2069,7 +2073,9 @@ static void generateCpp(sipSpec *pt, moduleDef *mod, const char *codeDir,
 
         prcode(fp, ",NULL)) == NULL || PyDict_SetItemString(sipModuleDict,\"%s\",exceptionsTable[%d]) < 0)\n"
 "    {\n"
+"#if PY_VERSION_HEX < 0x03010000\n"
 "        Py_DECREF(sip_sipmod);\n"
+"#endif\n"
 "        SIP_MODULE_DISCARD(sipModule);\n"
 "        SIP_MODULE_RETURN(0);\n"
 "    }\n"
@@ -2186,11 +2192,34 @@ static void generateTypesTable(sipSpec *pt, moduleDef *mod, FILE *fp)
 static void generateSipImport(moduleDef *mod, FILE *fp)
 {
     prcode(fp,
-"    /* Import the SIP module and get it's API. */\n"
+"    /* Get the SIP module's API. */\n"
+"#if PY_VERSION_HEX >= 0x03010000\n"
+"\n"
+        );
+
+    if (generating_c)
+        prcode(fp,
+"    sipAPI_%s = (const sipAPIDef *)PyCapsule_Import(\"sip._C_API\", 0);\n"
+        , mod->name);
+    else
+        prcode(fp,
+"    sipAPI_%s = reinterpret_cast<const sipAPIDef *>(PyCapsule_Import(\"sip._C_API\", 0));\n"
+        , mod->name);
+
+    prcode(fp,
+"\n"
+"    if (sipAPI_%s == NULL)\n"
+"    {\n"
+"        SIP_MODULE_DISCARD(sipModule);\n"
+"        SIP_MODULE_RETURN(NULL);\n"
+"    }\n"
+"\n"
+"#else\n"
+"\n"
 "#if PY_VERSION_HEX >= 0x02050000\n"
 "    sip_sipmod = PyImport_ImportModule(\"sip\");\n"
 "#else\n"
-        );
+        , mod->name);
 
     if (generating_c)
         prcode(fp,
@@ -2232,6 +2261,8 @@ static void generateSipImport(moduleDef *mod, FILE *fp)
 
     prcode(fp,
 "\n"
+"#endif\n"
+"\n"
         );
 }
 
@@ -2242,7 +2273,9 @@ static void generateSipImport(moduleDef *mod, FILE *fp)
 static void generateSipImportVariables(FILE *fp)
 {
     prcode(fp,
+"#if PY_VERSION_HEX < 0x03010000\n"
 "    PyObject *sip_sipmod, *sip_capiobj;\n"
+"#endif\n"
 "\n"
         );
 }
